MontyPythonParser.java
// Generated from MontyPython.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MontyPythonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IDellista=1, AND=2, OR=3, NOT=4, EQ=5, COMMA=6, SEMI=7, LPAREN=8, RPAREN=9, 
		LCURLY=10, RCURLY=11, LSQUARE=12, RSQUARE=13, TWOPOINTS=14, EXP=15, MULT=16, 
		DIV=17, IDIV=18, MOD=19, SUM=20, SUBT=21, LESS=22, LESSEQ=23, BIGG=24, 
		BIGGEQ=25, EQUAL=26, DIFF=27, DINT=28, DFLOAT=29, INPUT=30, PRINT=31, 
		WHILE=32, IF=33, ELIF=34, ELSE=35, FOR=36, IN=37, RANGE=38, DEF=39, RETURN=40, 
		LSIZE=41, LADD=42, LREMOVE=43, INT=44, FLOAT=45, MMENOS=46, STRING=47, 
		ID=48, COMMENT=49, WS=50;
	public static final int
		RULE_program = 0, RULE_progline = 1, RULE_stat = 2, RULE_assignment = 3, 
		RULE_declaration = 4, RULE_deftipo = 5, RULE_funcheader = 6, RULE_funcreturn = 7, 
		RULE_def = 8, RULE_whilecycle = 9, RULE_ifthenelse = 10, RULE_forin = 11, 
		RULE_tlistint = 12, RULE_tlistfloat = 13, RULE_flsize = 14, RULE_fladd = 15, 
		RULE_flremove = 16, RULE_inputline = 17, RULE_printstat = 18, RULE_trange = 19, 
		RULE_expr = 20, RULE_exprlogic = 21, RULE_func = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "progline", "stat", "assignment", "declaration", "deftipo", 
			"funcheader", "funcreturn", "def", "whilecycle", "ifthenelse", "forin", 
			"tlistint", "tlistfloat", "flsize", "fladd", "flremove", "inputline", 
			"printstat", "trange", "expr", "exprlogic", "func"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'and'", "'or'", "'not'", "'='", "','", "';'", "'('", "')'", 
			"'{'", "'}'", "'['", "']'", "':'", "'**'", "'*'", "'/'", "'//'", "'%'", 
			"'+'", "'-'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'int'", 
			"'float'", "'input'", "'print'", "'while'", "'if'", "'elif'", "'else'", 
			"'for'", "'in'", "'range'", "'def'", "'return'", "'size'", "'add'", "'remove'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IDellista", "AND", "OR", "NOT", "EQ", "COMMA", "SEMI", "LPAREN", 
			"RPAREN", "LCURLY", "RCURLY", "LSQUARE", "RSQUARE", "TWOPOINTS", "EXP", 
			"MULT", "DIV", "IDIV", "MOD", "SUM", "SUBT", "LESS", "LESSEQ", "BIGG", 
			"BIGGEQ", "EQUAL", "DIFF", "DINT", "DFLOAT", "INPUT", "PRINT", "WHILE", 
			"IF", "ELIF", "ELSE", "FOR", "IN", "RANGE", "DEF", "RETURN", "LSIZE", 
			"LADD", "LREMOVE", "INT", "FLOAT", "MMENOS", "STRING", "ID", "COMMENT", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MontyPython.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MontyPythonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MontyPythonParser.EOF, 0); }
		public List<ProglineContext> progline() {
			return getRuleContexts(ProglineContext.class);
		}
		public ProglineContext progline(int i) {
			return getRuleContext(ProglineContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MontyPythonListener ) ((MontyPythonListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MontyPythonListener ) ((MontyPythonListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MontyPythonVisitor ) return ((MontyPythonVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 296402940854274L) != 0)) {
				{
				{
				setState(46);
				progline();
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(52);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProglineContext extends ParserRuleContext {
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public DefContext def() {
			return getRuleContext(DefContext.class,0);
		}
		public ProglineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_progline; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MontyPythonListener ) ((MontyPythonListener)listener).enterProgline(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MontyPythonListener ) ((MontyPythonListener)listener).exitProgline(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MontyPythonVisitor ) return ((MontyPythonVisitor<? extends T>)visitor).visitProgline(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProglineContext progline() throws RecognitionException {
		ProglineContext _localctx = new ProglineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_progline);
		try {
			setState(56);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				stat();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				def();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public WhilecycleContext whilecycle() {
			return getRuleContext(WhilecycleContext.class,0);
		}
		public IfthenelseContext ifthenelse() {
			return getRuleContext(IfthenelseContext.class,0);
		}
		public ForinContext forin() {
			return getRuleContext(ForinContext.class,0);
		}
		public FuncheaderContext funcheader() {
			return getRuleContext(FuncheaderContext.class,0);
		}
		public FuncreturnContext funcreturn() {
			return getRuleContext(FuncreturnContext.class,0);
		}
		public PrintstatContext printstat() {
			return getRuleContext(PrintstatContext.class,0);
		}
		public FladdContext fladd() {
			return getRuleContext(FladdContext.class,0);
		}
		public FlremoveContext flremove() {
			return getRuleContext(FlremoveContext.class,0);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MontyPythonListener ) ((MontyPythonListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MontyPythonListener ) ((MontyPythonListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MontyPythonVisitor ) return ((MontyPythonVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stat);
		try {
			setState(68);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				declaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				assignment();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(60);
				whilecycle();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(61);
				ifthenelse();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(62);
				forin();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(63);
				funcheader();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(64);
				funcreturn();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(65);
				printstat();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(66);
				fladd();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(67);
				flremove();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode EQ() { return getToken(MontyPythonParser.EQ, 0); }
		public TerminalNode ID() { return getToken(MontyPythonParser.ID, 0); }
		public TerminalNode IDellista() { return getToken(MontyPythonParser.IDellista, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TlistintContext tlistint() {
			return getRuleContext(TlistintContext.class,0);
		}
		public TlistfloatContext tlistfloat() {
			return getRuleContext(TlistfloatContext.class,0);
		}
		public InputlineContext inputline() {
			return getRuleContext(InputlineContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MontyPythonListener ) ((MontyPythonListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MontyPythonListener ) ((MontyPythonListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MontyPythonVisitor ) return ((MontyPythonVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_la = _input.LA(1);
			if ( !(_la==IDellista || _la==ID) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(71);
			match(EQ);
			setState(76);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(72);
				expr(0);
				}
				break;
			case 2:
				{
				setState(73);
				tlistint();
				}
				break;
			case 3:
				{
				setState(74);
				tlistfloat();
				}
				break;
			case 4:
				{
				setState(75);
				inputline();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public TerminalNode DINT() { return getToken(MontyPythonParser.DINT, 0); }
		public List<TerminalNode> ID() { return getTokens(MontyPythonParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(MontyPythonParser.ID, i);
		}
		public List<TerminalNode> EQ() { return getTokens(MontyPythonParser.EQ); }
		public TerminalNode EQ(int i) {
			return getToken(MontyPythonParser.EQ, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MontyPythonParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MontyPythonParser.COMMA, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public InputlineContext inputline() {
			return getRuleContext(InputlineContext.class,0);
		}
		public TerminalNode DFLOAT() { return getToken(MontyPythonParser.DFLOAT, 0); }
		public TerminalNode LSQUARE() { return getToken(MontyPythonParser.LSQUARE, 0); }
		public TerminalNode RSQUARE() { return getToken(MontyPythonParser.RSQUARE, 0); }
		public TlistintContext tlistint() {
			return getRuleContext(TlistintContext.class,0);
		}
		public TlistfloatContext tlistfloat() {
			return getRuleContext(TlistfloatContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MontyPythonListener ) ((MontyPythonListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MontyPythonListener ) ((MontyPythonListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MontyPythonVisitor ) return ((MontyPythonVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaration);
		int _la;
		try {
			setState(152);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				match(DINT);
				setState(86);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					{
					setState(79);
					match(ID);
					}
					}
					break;
				case 2:
					{
					{
					setState(80);
					match(ID);
					setState(81);
					match(EQ);
					setState(84);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case IDellista:
					case LPAREN:
					case LSIZE:
					case INT:
					case FLOAT:
					case ID:
						{
						setState(82);
						expr(0);
						}
						break;
					case INPUT:
						{
						setState(83);
						inputline();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					}
					break;
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					setState(94);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
					case 1:
						{
						{
						setState(88);
						match(COMMA);
						setState(89);
						match(ID);
						}
						}
						break;
					case 2:
						{
						{
						setState(90);
						match(COMMA);
						setState(91);
						match(ID);
						setState(92);
						match(EQ);
						setState(93);
						expr(0);
						}
						}
						break;
					}
					}
					setState(98);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				match(DFLOAT);
				setState(104);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					{
					setState(100);
					match(ID);
					}
					}
					break;
				case 2:
					{
					{
					setState(101);
					match(ID);
					setState(102);
					match(EQ);
					setState(103);
					expr(0);
					}
					}
					break;
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					setState(112);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						{
						setState(106);
						match(COMMA);
						setState(107);
						match(ID);
						}
						}
						break;
					case 2:
						{
						{
						setState(108);
						match(COMMA);
						setState(109);
						match(ID);
						setState(110);
						match(EQ);
						setState(111);
						expr(0);
						}
						}
						break;
					}
					}
					setState(116);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(121);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
				case 1:
					{
					{
					setState(117);
					match(ID);
					}
					}
					break;
				case 2:
					{
					{
					setState(118);
					match(ID);
					setState(119);
					match(EQ);
					setState(120);
					expr(0);
					}
					}
					break;
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					setState(129);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
					case 1:
						{
						{
						setState(123);
						match(COMMA);
						setState(124);
						match(ID);
						}
						}
						break;
					case 2:
						{
						{
						setState(125);
						match(COMMA);
						setState(126);
						match(ID);
						setState(127);
						match(EQ);
						setState(128);
						expr(0);
						}
						}
						break;
					}
					}
					setState(133);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(134);
				match(DINT);
				setState(135);
				match(LSQUARE);
				setState(136);
				match(RSQUARE);
				setState(141);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
				case 1:
					{
					setState(137);
					match(ID);
					}
					break;
				case 2:
					{
					{
					setState(138);
					match(ID);
					setState(139);
					match(EQ);
					setState(140);
					tlistint();
					}
					}
					break;
				}
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(143);
				match(DFLOAT);
				setState(144);
				match(LSQUARE);
				setState(145);
				match(RSQUARE);
				setState(150);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
				case 1:
					{
					setState(146);
					match(ID);
					}
					break;
				case 2:
					{
					{
					setState(147);
					match(ID);
					setState(148);
					match(EQ);
					setState(149);
					tlistfloat();
					}
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeftipoContext extends ParserRuleContext {
		public TerminalNode DINT() { return getToken(MontyPythonParser.DINT, 0); }
		public TerminalNode DFLOAT() { return getToken(MontyPythonParser.DFLOAT, 0); }
		public TerminalNode LSQUARE() { return getToken(MontyPythonParser.LSQUARE, 0); }
		public TerminalNode RSQUARE() { return getToken(MontyPythonParser.RSQUARE, 0); }
		public DeftipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deftipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MontyPythonListener ) ((MontyPythonListener)listener).enterDeftipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MontyPythonListener ) ((MontyPythonListener)listener).exitDeftipo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MontyPythonVisitor ) return ((MontyPythonVisitor<? extends T>)visitor).visitDeftipo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeftipoContext deftipo() throws RecognitionException {
		DeftipoContext _localctx = new DeftipoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_deftipo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			_la = _input.LA(1);
			if ( !(_la==DINT || _la==DFLOAT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LSQUARE) {
				{
				setState(155);
				match(LSQUARE);
				setState(156);
				match(RSQUARE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncheaderContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(MontyPythonParser.DEF, 0); }
		public List<TerminalNode> ID() { return getTokens(MontyPythonParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(MontyPythonParser.ID, i);
		}
		public TerminalNode LPAREN() { return getToken(MontyPythonParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(MontyPythonParser.RPAREN, 0); }
		public TerminalNode TWOPOINTS() { return getToken(MontyPythonParser.TWOPOINTS, 0); }
		public List<DeftipoContext> deftipo() {
			return getRuleContexts(DeftipoContext.class);
		}
		public DeftipoContext deftipo(int i) {
			return getRuleContext(DeftipoContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MontyPythonParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MontyPythonParser.COMMA, i);
		}
		public FuncheaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcheader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MontyPythonListener ) ((MontyPythonListener)listener).enterFuncheader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MontyPythonListener ) ((MontyPythonListener)listener).exitFuncheader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MontyPythonVisitor ) return ((MontyPythonVisitor<? extends T>)visitor).visitFuncheader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncheaderContext funcheader() throws RecognitionException {
		FuncheaderContext _localctx = new FuncheaderContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_funcheader);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(DEF);
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DINT || _la==DFLOAT) {
				{
				setState(160);
				deftipo();
				}
			}

			setState(163);
			match(ID);
			setState(164);
			match(LPAREN);
			setState(179);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 281475782017024L) != 0)) {
				{
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==DINT || _la==DFLOAT) {
					{
					setState(165);
					deftipo();
					}
				}

				setState(168);
				match(ID);
				setState(176);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(169);
					match(COMMA);
					setState(171);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==DINT || _la==DFLOAT) {
						{
						setState(170);
						deftipo();
						}
					}

					setState(173);
					match(ID);
					}
					}
					setState(178);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(181);
			match(RPAREN);
			setState(182);
			match(TWOPOINTS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncreturnContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(MontyPythonParser.RETURN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public FuncreturnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcreturn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MontyPythonListener ) ((MontyPythonListener)listener).enterFuncreturn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MontyPythonListener ) ((MontyPythonListener)listener).exitFuncreturn(this);
		}
		@Override
